# strava-tui

./: .env.example  Cargo.toml  README.md
src/: app.rs  auth.rs  main.rs  meteo.rs  strava.rs  ui.rs
