[package]
name = "strava-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "strava-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
open = "3"
tiny_http = "0.12"
dirs-next = "2"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-rustls = { version = "0.24", features = ["http1", "webpki-tokio"] }
